# windows-update-service

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
examples/: client_example.cpp
src/: ActiveXInstaller.cpp  FontInstaller.cpp  IPCManager.cpp (Complete Implementation)  ServiceInstaller.h  UpdateService.cpp  UpdateService.h
